# Polycraft-Launcher

./: .arcconfig  .gitignore  BUILD.md  CMakeLists.txt  COPYING.md  README.md
api/gui/: CMakeLists.txt  DesktopServices.h  SkinUtils.cpp  SkinUtils.h
api/logic/: BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  Env.h  Exception.h  FileSystem.h  FileSystem_test.cpp  Filter.h  GZip.h  InstanceCopyTask.h  Json.h  (+19 more)
application/: BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  ColorCache.h  GuiUtil.cpp  HoeDown.h  InstanceProxyModel.cpp  InstanceWindow.cpp  InstanceWindow.h  JavaInstallStaging.cpp  JavaInstallStaging.h  LaunchController.cpp  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h  PolycraftLauncher.cpp  PolycraftLauncher.h  SettingsUI.h  UpdateController.cpp  VersionProxyModel.cpp  main.cpp
libraries/: README.md
libraries/launcher/: CMakeLists.txt
libraries/launcher/net/minecraft/: Launcher.java
libraries/launcher/org/multimc/: EntryPoint.java  Launcher.java  LegacyFrame.java  NotFoundException.java  ParamBucket.java  ParseException.java  Utils.java
libraries/launcher/org/multimc/onesix/: OneSixLauncher.java
libraries/launcher/org/polycraftlauncher/: EntryPoint.java  Launcher.java  LegacyFrame.java  NotFoundException.java  ParamBucket.java  ParseException.java  Utils.java
libraries/launcher/org/polycraftlauncher/onesix/: OneSixLauncher.java
libraries/rainbow/: CMakeLists.txt
libraries/rainbow/include/: rainbow_config.h
(+315 files in other folders)
